--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
     <style name="my">
+        <item name="android:drawable">@drawable/ripple_animation</item>
         <item name="android:layout_marginLeft">8dp</item>
         <item name="android:layout_marginStart" tools:targetApi="jelly_bean_mr1">8dp</item>
         <item name="android:layout_marginRight">8dp</item>
