--- a/app/src/main/res/layout/meteo_station.xml
+++ b/app/src/main/res/layout/meteo_station.xml
@@ -2,67 +2,68 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#09C"
+    android:background="@color/colorPrimary"
+    android:gravity="center_vertical|center_horizontal"
     android:orientation="vertical"
     android:padding="@dimen/widget_margin">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/appwidget_t2"
-            android:layout_width="wrap_content"
+            style="@style/my"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:background="#09C"
-            android:contentDescription="@string/appwidget_text"
-            android:text="@string/appwidget_text"
-            android:textColor="#ffffff"
+            android:layout_weight="1"
+            android:text="@string/tv_temperature_2"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryText"
             android:textSize="24sp"
             android:textStyle="bold|italic"/>
 
         <TextView
             android:id="@+id/appwidget_hum"
-            android:layout_width="wrap_content"
+            style="@style/my"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:background="#09C"
-            android:contentDescription="@string/appwidget_text"
-            android:text="@string/appwidget_text"
-            android:textColor="#ffffff"
+            android:layout_weight="1"
+            android:text="@string/tv_humidity"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryText"
             android:textSize="24sp"
             android:textStyle="bold|italic"/>
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical|center_horizontal"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/appwidget_air"
-            android:layout_width="wrap_content"
+            style="@style/my"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:background="#09C"
-            android:contentDescription="@string/appwidget_text"
-            android:text="@string/appwidget_text"
-            android:textColor="#ffffff"
+            android:layout_weight="1"
+            android:text="@string/tv_air"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryText"
             android:textSize="24sp"
             android:textStyle="bold|italic"/>
 
         <TextView
             android:id="@+id/appwidget_pre"
-            android:layout_width="wrap_content"
+            style="@style/my"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:background="#09C"
-            android:contentDescription="@string/appwidget_text"
-            android:text="@string/appwidget_text"
-            android:textColor="#ffffff"
+            android:layout_weight="1"
+            android:text="@string/tv_pressure"
+            android:textColor="@color/colorPrimaryText"
             android:textSize="24sp"
             android:textStyle="bold|italic"/>
 
