--- a/app/src/main/res/layout/meteo_station.xml
+++ b/app/src/main/res/layout/meteo_station.xml
@@ -1,11 +1,19 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="230dp"
+    android:layout_height="160dp"
+    android:layout_margin="8dp"
     android:background="@color/colorPrimary"
-    android:gravity="center_vertical|center_horizontal"
-    android:orientation="vertical"
-    android:padding="@dimen/widget_margin">
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:padding="4dp"
+        android:text="@string/tv_widget_name"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryText"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,6 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/tv_pressure"
+            android:textAlignment="center"
             android:textColor="@color/colorPrimaryText"
             android:textSize="24sp"
             android:textStyle="bold|italic"/>
