--- a/app/src/main/res/xml/meteo_station_info.xml
+++ b/app/src/main/res/xml/meteo_station_info.xml
@@ -5,7 +5,7 @@
     android:initialLayout="@layout/meteo_station"
     android:minHeight="110dp"
     android:minWidth="180dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/widget_preview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="1800000"
     android:widgetCategory="home_screen">
