--- a/app/src/main/res/layout/graphics.xml
+++ b/app/src/main/res/layout/graphics.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <com.github.mikephil.charting.charts.LineChart
+        style="@style/my"
         android:id="@+id/chart_menu_graphic"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
